added some basic css and a button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>ChicFlix</title>
 </head>
+
 <body>
+    <div>
+        <h1>Welcome to ChickFlix</h1>
+        <button>Click to begin</button>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
-
-
-
-
