created the width and height for the quiz

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="Quiz">
                 <h2>quiz 1</h2>
             </div>
+            <div class="Quiz">
+                <h2>quiz 1</h2>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
