created the prev and next button and also gave the actual quiz content height and width

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
             <div class="Quiz">
                 <h2>quiz 1</h2>
             </div>
-            <div class="Quiz">
-                <h2>quiz 1</h2>
-            </div>
+            <button>prev</button>
+            <button>next</button>
         </div>
     </div>
     <script src="script.js"></script>
