--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <div id="Quiz-Modal-Slide" class="Quiz-Modal">
         <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
         <div class="Quiz-content">
-            <div class="Quiz">
-                <h2>quiz 1</h2>
+            <div class="Quiz box1">
+                <div class="flash-card front-card box1a"></div>
+                <div class="flash-card back-card box1b"></div>
             </div>
-            <button>prev</button>
-            <button>next</button>
+            <button class="previous">prev</button>
+            <button class="next">next</button>
         </div>
     </div>
     <script src="script.js"></script>
