fixed the continous arraying by changing the tag assciated with the onclick and and making the display none

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
         <div class="Quiz-content">
             <div class="Quiz box1">
-                <div class="flash-card front-card box1a"></div>
+                <h2 class="testing">Quiz 1</h2>
+                <div class="flash-card front-card box1a">Quiz 1</div>
                 <div class="flash-card back-card box1b"></div>
             </div>
             <button class="previous">prev</button>
