hid the buttons and made them display on click, also added some styling to the click to begin

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
         <div class="Quiz-content">
             <div class="Quiz box1">
-                <h2 class="testing">Quiz 1</h2>
-                <div class="flash-card front-card box1a">Quiz 1</div>
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box1a"></div>
                 <div class="flash-card back-card box1b"></div>
             </div>
-            <button class="previous">prev</button>
-            <button class="next">next</button>
+            <button class="previous inactive">prev</button>
+            <button class="next inactive">next</button>
         </div>
     </div>
     <script src="script.js"></script>
