made data for the flashcards

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Welcome to ChickFlix</h1>
         <button class="open-modal" onclick="openQuizSlide();toSlide(1)">Click to begin</button>
         <button class="open-modal" onclick="openQuizSlide();toSlide(2)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(3)">Click to begin</button>
     </div>
     <div id="Quiz-Modal-Slide" class="Quiz-Modal">
         <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
@@ -31,6 +32,13 @@
                 </div>
                 <div class="flash-card front-card box2a"></div>
                 <div class="flash-card back-card box2b"></div>
+            </div>
+            <div class="Quiz box3">
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz3">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box3a"></div>
+                <div class="flash-card back-card box3b"></div>
             </div>
             <button class="previous inactive">prev</button>
             <button class="next inactive">next</button>
