--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <button class="open-modal" onclick="openQuizSlide();toSlide(1)">Click to begin</button>
         <button class="open-modal" onclick="openQuizSlide();toSlide(2)">Click to begin</button>
         <button class="open-modal" onclick="openQuizSlide();toSlide(3)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(4)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(5)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(6)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(7)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(8)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(9)">Click to begin</button>
     </div>
     <div id="Quiz-Modal-Slide" class="Quiz-Modal">
         <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
