created the quiz decks for the data associated with it

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
     <div>
         <h1>Welcome to ChickFlix</h1>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(1)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(2)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(3)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(4)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(5)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(6)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(7)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(8)">Click to begin</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(9)">Click to begin</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(1)">Africa</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(2)">Central Dogma of Genetics</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(3)"> Female inventors</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(4)">Molecules</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(5)">Psycology</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(6)">Phylogeny</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(7)">Female record breakers</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(8)">Female world leaders</button>
+        <button class="open-modal" onclick="openQuizSlide();toSlide(9)">Female Athletes</button>
     </div>
     <div id="Quiz-Modal-Slide" class="Quiz-Modal">
         <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
@@ -45,6 +45,48 @@
                 </div>
                 <div class="flash-card front-card box3a"></div>
                 <div class="flash-card back-card box3b"></div>
+            </div>
+            <div class="Quiz box4">
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz4">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box4a"></div>
+                <div class="flash-card back-card box4b"></div>
+            </div>
+            <div class="Quiz box5">
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz5">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box5a"></div>
+                <div class="flash-card back-card box5b"></div>
+            </div>
+            <div class="Quiz box6">
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz6">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box6a"></div>
+                <div class="flash-card back-card box6b"></div>
+            </div>
+            <div class="Quiz box7">
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz7">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box7a"></div>
+                <div class="flash-card back-card box7b"></div>
+            </div>
+            <div class="Quiz box8">
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz8">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box8a"></div>
+                <div class="flash-card back-card box8b"></div>
+            </div>
+            <div class="Quiz box9">
+                <div class="startQuizContainer">
+                    <h2 class="startQuiz9">Click to begin</h2>
+                </div>
+                <div class="flash-card front-card box9a"></div>
+                <div class="flash-card back-card box9b"></div>
             </div>
             <button class="previous inactive">prev</button>
             <button class="next inactive">next</button>
