added media queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -11,18 +11,45 @@
 
 <body>
     <h1>Welcome to ChickFlix</h1>
-    
+
     <div class="flashCard__buttons">
         <!-- buttons to open the slide, we eventually want make images with these buttons underneth them -->
-        <button class="open-modal" onclick="openQuizSlide();toSlide(1)">Africa</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(2)">Central Dogma of Genetics</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(3)"> Female inventors</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(4)">Molecules</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(5)">Psycology</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(6)">Phylogeny</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(7)">Female record breakers</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(8)">Female world leaders</button>
-        <button class="open-modal" onclick="openQuizSlide();toSlide(9)">Female Athletes</button>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300" width="275.58">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(1)">Africa</button>
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(2)">Central Dogma of Genetics</button>
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(3)"> Female inventors</button>
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(4)">Molecules</button> 
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(5)">Psycology</button>
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(6)">Phylogeny</button> 
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(7)">Female record breakers</button> 
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(8)">Female world leaders</button> 
+        </div>
+        <div class="flashCard__buttonsImg">
+            <img src="./images/mama-africa.jpg" height="300">
+            <button class="open-modal" onclick="openQuizSlide();toSlide(9)">Female Athletes</button> 
+        </div>
     </div>
 
     <!-- div containing the slide -->
