trying to figure out the smallest screen size

--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
                 <div class="flash-card front-card box9a"></div>
                 <div class="flash-card back-card box9b"></div>
             </div>
-            <button class="previous inactive">prev</button>
+            <div>
+                <button class="previous inactive">previous</button>
             <button class="next inactive">next</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
