created the home and quiz page

--- a/Flashcard/index.html
+++ b/Flashcard/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
     <title>ChicFlix</title>
 </head>
 
 <body>
-    <h1>Welcome to ChickFlix</h1>
+    <div class="home">
+        <a href="../Home/index.html">ChickFlix</a>
+    </div>
+   
 
     <div class="flashCard__buttons">
         <!-- buttons to open the slide, we eventually want make images with these buttons underneth them -->
