created the home and quiz page

--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -22,10 +22,10 @@
         </div>
         <div class="link-button-home">
             <div class="link-Button">
-                <a href="../Flashcard/index.html"> Open Flashcard</a>
+                <a href="../Flashcard/index.html">Flashcard</a>
             </div>
             <div class="link-Button">
-                <a href="../Quiz/index.html"> Open quiz</a>
+                <a href="../Quiz/index.html">Quiz</a>
             </div>
         </div>
     </div>
