added published links to all files

--- a/src/Home/index.html
+++ b/src/Home/index.html
@@ -22,10 +22,10 @@
         </div>
         <div class="link-button-home">
             <div class="link-Button">
-                <a href="../Flashcard/index.html">Flashcard</a>
+                <a href="https://chick-flix-flashcard.netlify.com/">Flashcard</a>
             </div>
             <div class="link-Button">
-                <a href="../Quiz/index.html">Quiz</a>
+                <a href="https://chick-flix-quix.netlify.com/">Quiz</a>
             </div>
         </div>
     </div>
