added published links to all files

--- a/src/Flashcard/index.html
+++ b/src/Flashcard/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="home">
-        <a href="../Home/index.html">ChickFlix</a>
+        <a href="https://chick-flix.netlify.com/">ChickFlix</a>
+        <a href="https://chick-flix-quix.netlify.com/">Quiz</a>
     </div>
    
 
