--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>Welcome to quiz</h1>
+    <div class="home">
+        <a href="https://chick-flix.netlify.com/">ChickFlix</a>
+    </div>
+    <div class="link-Button">
+        <a href="https://chick-flix-flashcard.netlify.com/">Flashcard</a>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
