adding some basic styling to the quiz page

--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -15,6 +15,17 @@
     <div class="link-Button">
         <a href="https://chick-flix-flashcard.netlify.com/">Flashcard</a>
     </div>
+    <button class="open-modal" onclick="openQuizSlide();toSlide(1)">Quiz</button>
+    <div id="Quiz-Modal-Slide" class="Quiz-Modal">
+        <div>
+            <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
+        </div>
+        <div class="Quiz-content">
+            <div class="Quiz box1">
+                <h2>Quiz</h2>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
