--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -22,7 +23,26 @@
         </div>
         <div class="Quiz-content">
             <div class="Quiz box1">
-                <h2>Quiz</h2>
+                <div class="Question-box">
+                    <h3 class="Question">Question</h3>
+                </div>
+                <div class="quiz-options">
+                    <div class="option-box">
+                        <button class="option1">Options</button>
+                    </div>
+                    <div class="option-box">
+                        <button class="option2">Options</button>
+                    </div>
+                    <div class="option-box">
+                        <button class="option3">Options</button>
+                    </div>
+                    <div class="option-box">
+                        <button class="option4">Options</button>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <button class="next inactive">next</button>
             </div>
         </div>
     </div>
