quiz is ready to be functional

--- a/src/Flashcard/index.html
+++ b/src/Flashcard/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="home">
         <a href="https://chick-flix.netlify.com/">ChickFlix</a>
-        <a href="https://chick-flix-quix.netlify.com/">Quiz</a>
+        <a href="https://chick-flix-quix.netlify.com/">  | Quiz</a>
     </div>
 
 
