--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div class="home">
-        <a href="https://chick-flix.netlify.com/">ChickFlix</a>
-        <a href="https://chick-flix-flashcard.netlify.com/">Flashcard</a>
+        <a href="https://chick-flix.netlify.com/">ChickFlix</a> 
+        <a href="https://chick-flix-flashcard.netlify.com/">|  Flashcard</a>
     </div>
     <button class="open-modal" onclick="openQuizSlide()">Quiz</button>
     <div id="Quiz-Modal-Slide" class="Quiz-Modal">
