added an event listener to the quiz button to pull data from an api

--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -22,20 +22,20 @@
         <div class="Quiz-content">
             <div class="Quiz box1">
                 <div class="Question-box">
-                    <h3 class="Question">Question</h3>
+                    <h3 class="Question"></h3>
                 </div>
                 <div class="quiz-options">
                     <div class="option-box">
-                        <button class="option1" onclick="option()">Options</button>
+                        <button class="option1" onclick="option()"></button>
                     </div>
                     <div class="option-box">
-                        <button class="option2" onclick="option()">Options</button>
+                        <button class="option2" onclick="option()"></button>
                     </div>
                     <div class="option-box">
-                        <button class="option3" onclick="option()">Options</button>
+                        <button class="option3" onclick="option()"></button>
                     </div>
                     <div class="option-box">
-                        <button class="option4" onclick="option()">Options</button>
+                        <button class="option4" onclick="option()"></button>
                     </div>
                 </div>
             </div>
