made the next button functional

--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div>
-                <button class="next inactive" onclick="option()">next</button>
+                <button class="next">next</button>
             </div>
         </div>
     </div>
