--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,12 @@
     <link href="https://fonts.googleapis.com/css?family=Girassol&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
+
     <div class="home">
-        <a href="https://chick-flix.netlify.com/">ChickFlix</a> 
-        <a href="https://chick-flix-flashcard.netlify.com/">|  Flashcard</a>
+        <a href="https://chick-flix.netlify.com/">ChickFlix</a>
+        <a href="https://chick-flix-flashcard.netlify.com/">| Flashcard</a>
     </div>
     <button class="open-modal" onclick="openQuizSlide()">Quiz</button>
     <div id="Quiz-Modal-Slide" class="Quiz-Modal">
@@ -21,29 +24,18 @@
         </div>
         <div class="Quiz-content">
             <div class="Quiz box1">
-                <div class="Question-box">
-                    <h3 class="Question"></h3>
-                </div>
-                <div class="quiz-options">
-                    <div class="option-box">
-                        <button class="option1" onclick="option()"></button>
-                    </div>
-                    <div class="option-box">
-                        <button class="option2" onclick="option()"></button>
-                    </div>
-                    <div class="option-box">
-                        <button class="option3" onclick="option()"></button>
-                    </div>
-                    <div class="option-box">
-                        <button class="option4" onclick="option()"></button>
-                    </div>
-                </div>
+                <div id="quiz"></div>
             </div>
             <div>
-                <button class="next">next</button>
+                <button id="previous">Previous Question</button>
+                <button id="next">Next Question</button>
+                <button id="submit">Submit Quiz</button>
             </div>
+            <div id="results"></div>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
-</html> 
+
+</html>
