refactoring the quiz code

--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -23,7 +23,7 @@
             <span class="close-modal" onclick="closeQuizSlide()">&times;</span>
         </div>
         <div class="Quiz-content">
-            <div class="Quiz box1">
+            <div class="quiz-container">
                 <div id="quiz"></div>
             </div>
             <div>
