added scoring function to the quiz

--- a/src/Quiz/index.html
+++ b/src/Quiz/index.html
@@ -24,14 +24,18 @@
         </div>
         <div class="Quiz-content">
             <div class="quiz-container">
-                <div id="quiz"></div>
-            </div>
-            <div>
-                <button id="previous">Previous Question</button>
-                <button id="next">Next Question</button>
-                <button id="submit">Submit Quiz</button>
+                <div id="quiz">
+                    <!-- <div id="results"></div> -->
+                </div>
+                
             </div>
             <div id="results"></div>
+            <div>
+                <button id="previous">Previous</button>
+                <button id="next">Next</button>
+                <button id="submit">Submit Quiz</button>
+            </div>
+            
         </div>
     </div>
 
